# cookiecutter-python-claude

./: AGENTS.md  README.md  TODO.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMMANDS.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
{{cookiecutter.project_slug}}/.claude/: CLAUDE.md  PM_USAGE.md  settings.local.json
{{cookiecutter.project_slug}}/.claude/commands/pm/: python-commands.md
{{cookiecutter.project_slug}}/.claude/commands/testing/: prime-python.md
{{cookiecutter.project_slug}}/.claude/scripts/pm/: init.sh
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: __init__.py  health.py  router.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/v1/: __init__.py  router.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/v1/endpoints/: __init__.py  items.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/core/: __init__.py  config.py  logging.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/models/: __init__.py  item.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/services/: __init__.py  item_service.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_cli.py  test_health.py  test_items.py  test_main.py  test_{{cookiecutter.project_slug}}.py
